# android-camera2demo

app/: CMakeLists.txt  build.gradle
app/src/main/cpp/: native-lib.cpp
app/src/main/java/tau/camera2demo/: AutoFitSurfaceView.java  AutoFitTextureView.java  Camera2Demo.java  CustomView.java  JNIUtils.java
app/src/main/res/layout/: camera.xml
gradle/wrapper/: gradle-wrapper.properties
opencv/sdk/native/jni/: OpenCV.mk  android.toolchain.cmake
opencv/sdk/native/jni/abi-arm64-v8a/: OpenCVModules-release.cmake
opencv/sdk/native/jni/abi-armeabi-v7a/: OpenCVConfig.cmake  OpenCVModules-release.cmake  OpenCVModules.cmake
opencv/sdk/native/jni/include/opencv2/: cvconfig.h
